--- a/css/mw.css
+++ b/css/mw.css
@@ -86,6 +86,8 @@ div.social {
 
     top: 120px;
 
+    height: 45px;
+
 
 
 }
@@ -161,6 +163,13 @@ div.body {
 
 
 
+}
+
+#main {
+
+    visibility: hidden;
+    height: 0px;
+    width: 0px;
 }
 
 div.media {
@@ -255,7 +264,7 @@ a.testHover:hover {
 #contactInfo {
 
 
-    margin-left: 20%; width: 30%; float:left; text-align: center;
+    margin-left: 25%; width: 25%; float:left; text-align: center;
 
 }
 
@@ -263,7 +272,7 @@ a.testHover:hover {
 #contactInfo2 {
 
 
-    width: 30%; float:left; text-align: center
+    width: 25%; float:left; text-align: center
 
 
 
@@ -282,13 +291,78 @@ a.testHover:hover {
 .col-a-11 {width: 91.66%;}
 .col-a-12 {width: 100%;}
 
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+
+}
+
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+#main {
+    transition: margin-left .5s;
+    padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+
 @media only screen and (max-width: 912px) {
+
+
+    #main {
+
+
+        visibility: visible;
+    }
+
+    #banner-image2 {
+
+        width: 90vw;
+        margin-top: 3vw;
+
+    }
+
+
+
     div.banner {
         position: fixed;
         width: 100%;
         margin-top: -15px;
 
-        height: 140px;
+
+        text-align: center;
+        align-content: center;
+        height: 15vw;
         background-color: #e6e6e6;
     }
 
@@ -323,6 +397,8 @@ a.testHover:hover {
         width: 58px;
         top: 128px;
 
+        height: 175px;
+
 
 
     }
@@ -330,6 +406,8 @@ a.testHover:hover {
     #contactInfo {
 
         margin-left: 0%;
+
+        visibility: hidden;
 
          width: 100%;  text-align: center;
 
@@ -342,6 +420,7 @@ a.testHover:hover {
         width: 100%; text-align: center;
 
 
+        visibility: hidden;
 
     }
 
@@ -360,7 +439,7 @@ a.testHover:hover {
 
     #cover-image {
 
-        margin-top: 120px;
+        margin-top: 10vw;
 
 
     }
@@ -372,6 +451,27 @@ a.testHover:hover {
     .col-a-6 {
 
         width: 50%;
+    }
+
+    p {
+
+        font-size: 12px;
+    }
+
+    h1 {
+
+        font-size: 18px;
+
+    }
+
+    #bottom-bar {
+
+        padding: 0px;
+    }
+
+    h8 {
+
+        font-size: 10px;
     }
 
 }
