--- a/css/mw.css
+++ b/css/mw.css
@@ -206,6 +206,23 @@ h1 {
 
 }
 
+#article1:hover {
+
+    cursor: pointer;
+
+}
+
+#article2:hover {
+
+    cursor: pointer;
+
+}
+#article3:hover {
+
+    cursor: pointer;
+
+}
+
 p {
 
 
@@ -339,6 +356,8 @@ a.testHover:hover {
 @media only screen and (max-width: 912px) {
 
 
+
+
     #main {
 
         visibility: visible;
@@ -398,6 +417,7 @@ a.testHover:hover {
 
 
     div.social {
+
 
 
         background-color: #292b2c;
@@ -462,12 +482,29 @@ a.testHover:hover {
 
     p {
 
-        font-size: 14px;
+        font-size: 16px;
     }
 
     h1 {
 
         font-size: 18px;
+
+    }
+
+
+    #article1 {
+
+        background-size: 100% auto;
+
+    }
+    #article2 {
+
+        background-size: 100% auto;
+
+    }
+    #article3 {
+
+        background-size: 100% auto;
 
     }
 
