--- a/css/mw.css
+++ b/css/mw.css
@@ -10,6 +10,8 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
+
+
 html {
     color: #222;
     font-size: 1em;
@@ -790,4 +792,10 @@ a.testHover:hover {
     h3 {
         page-break-after: avoid;
     }
+}
+
+
+a[href^=tel] {
+    text-decoration:inherit;
+    color: inherit;
 }
