--- a/css/mw.css
+++ b/css/mw.css
@@ -139,6 +139,23 @@ div.banner-mobile {
 }
 
 
+
+
+#seeMorePosts:hover {
+
+
+    cursor: pointer;
+
+}
+
+#seeMorePosts2:hover {
+
+
+    cursor: pointer;
+
+}
+
+
 .fa {
     padding: 10px;
     font-size: 12px;
@@ -193,20 +210,6 @@ div.social {
 }
 
 
-div.test2 {
-
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    width: 900px;
-    height: 100px;
-
-    margin-left: -450px;
-    margin-top: -32px;
-
-
-
-}
 
 
 #test {
@@ -249,21 +252,21 @@ h2.test3 {
 
 }
 
-
+/*
 div.body {
 
     position: absolute;
-    width: 1100px;
-    margin-left: -550px;
+    width: 100%;
+
     margin-top: 120px;
     background-color: #dddddd;
-    left: 50%;
 
 
 
 
 
 }
+*/
 
 #main {
 
@@ -371,6 +374,18 @@ a.testHover {
 
 }
 
+a.testHover2 {
+
+    text-decoration: none;
+
+    line-height: 36px;
+    color: #303030;
+    font-family: Merriweather;
+    padding-bottom-bottom: 24px;
+    letter-spacing: 2px
+
+}
+
 a.testHover:hover {
 
     color: #999999;
@@ -381,7 +396,7 @@ a.testHover:hover {
 #contactInfo {
 
 
-    margin-left: 25%; width: 25%; float:left; text-align: center;
+    margin-left: 28%; width: 22%; float:left; text-align: center;
 
 }
 
@@ -389,7 +404,18 @@ a.testHover:hover {
 #contactInfo2 {
 
 
-    width: 25%; float:left; text-align: center
+    width: 22%; float:left; text-align: center
+
+
+
+}
+
+
+
+#contactInfo3 {
+
+
+    width: 17%; float:left; text-align: center
 
 
 
@@ -421,6 +447,41 @@ a.testHover:hover {
     padding-top: 60px;
 }
 
+
+.stay-in-place {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+.move-in-to-place {
+    position: absolute;
+    bottom: -100%;
+    height : 100%;
+    width : 100%;
+    opacity:0;
+}
+.box {
+    position: relative;
+    width: 25%;
+    overflow:hidden;
+    height: 28vw;
+    margin-left: 12.5%;
+    box-shadow: 2.5px 2.5px 5px #666666;
+}
+.box:hover {
+    cursor: pointer;
+
+}
+
+.box:hover .move-in-to-place {
+
+    bottom: 0;
+    -webkit-transition: all 1s, -webkit-transform 1s;
+    transition: all 1s, transform 1s;
+    width:100%;
+    height:100%;
+    opacity:1;
+}
 .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
@@ -429,6 +490,11 @@ a.testHover:hover {
     display: block;
     transition: 0.3s;
 
+}
+
+.description {
+
+    font-size: 12px;
 }
 
 .sidenav a:hover, .offcanvas a:focus{
@@ -447,15 +513,39 @@ a.testHover:hover {
     transition: margin-left .5s;
     padding: 16px;
 }
-
+/*
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 }
+*/
+
+.bioBox {
+
+    font-size: 15px;
+}
+
+#mainBody {
+
+    width: 80%; margin-left: 10%; padding-top:50px
+}
 
 @media only screen and (max-width: 912px) {
 
+    .bioBox {
 
+        font-size: 12px;
+    }
+    .description {
+
+        font-size: 12px;
+    }
+
+
+    #mainBody {
+        width: 100%;
+        margin: 0px;
+    }
 
 
     #main {
@@ -516,6 +606,57 @@ a.testHover:hover {
     }
 
 
+    .stay-in-place {
+        height: 100%;
+        width: 100%;
+        background: red;
+        position: absolute;
+    }
+    .move-in-to-place {
+        position: absolute;
+        bottom: -100%;
+        height : 100%;
+        width : 100%;
+        background: blue;
+        opacity:0;
+
+    }
+    .stay-in-place {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+    }
+    .move-in-to-place {
+        position: absolute;
+        bottom: -100%;
+        height : 100%;
+        width : 100%;
+        opacity:0;
+    }
+    .box {
+
+        position: relative;
+        width: 100%;
+        overflow:hidden;
+        height: 85vw;
+        margin-top: 7.5vw;
+        margin-left: 0%;
+    }
+    .box:hover {
+        cursor: pointer;
+
+    }
+
+    .box:hover .move-in-to-place {
+
+        bottom: 0;
+        -webkit-transition: all 1s, -webkit-transform 1s;
+        transition: all 1s, transform 1s;
+        width:100%;
+        height:100%;
+        opacity:1;
+    }
+
 
     div.social {
 
@@ -553,6 +694,14 @@ a.testHover:hover {
     }
 
 
+    #contactInfo3 {
+
+       visibility: hidden;
+
+    }
+
+
+
     a.testHover {
 
         text-decoration: none;
@@ -574,6 +723,23 @@ a.testHover:hover {
 
     [class*="col-a-"] {
         width: 100%;
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    .col-a-8 {
+        width: 100%;
+    }
+
+    .row {
+
+        padding: 0px;
+        margin: 0px;
+        width: 100%;
+
+
     }
 
     .col-a-6 {
