--- a/directory/main.css
+++ b/directory/main.css
@@ -1,30 +1,599 @@
-.body {
+/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */
+
+/*
+ * What follows is the result of much research on cross-browser styling.
+ * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
+ * Kroc Camen, and the H5BP dev community and team.
+ */
+
+/* ==========================================================================
+   Base styles: opinionated defaults
+   ========================================================================== */
+
+
+
+html {
+    color: #222;
+    font-size: 1em;
+    line-height: 1.4;
+}
+
+/*
+ * Remove text-shadow in selection highlight:
+ * https://twitter.com/miketaylr/status/12228805301
+ *
+ * These selection rule sets have to be separate.
+ * Customize the background color to match your design.
+ */
+
+::-moz-selection {
+    background: #b3d4fc;
+    text-shadow: none;
+}
+
+::selection {
+    background: #b3d4fc;
+    text-shadow: none;
+}
+
+/*
+ * A better looking default horizontal rule
+ */
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
+
+/*
+ * Remove the gap between audio, canvas, iframes,
+ * images, videos and the bottom of their containers:
+ * https://github.com/h5bp/html5-boilerplate/issues/440
+ */
+
+audio,
+canvas,
+iframe,
+img,
+svg,
+video {
+    vertical-align: middle;
+}
+
+/*
+ * Remove default fieldset styles.
+ */
+
+fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+/*
+ * Allow only vertical resizing of textareas.
+ */
+
+textarea {
+    resize: vertical;
+}
+
+/* ==========================================================================
+   Browser Upgrade Prompt
+   ========================================================================== */
+
+.browserupgrade {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
+
+/* ==========================================================================
+   Author's custom styles
+   ========================================================================== */
+
+
+div.banner {
+    position: fixed;
+    width: 100%;
+    margin-top: -15px;
+    height: 132px;
+    background-color: #e6e6e6;
+}
+
+a.testHover {
+
+    text-decoration: none;
+
+    line-height: 36px;
+    color: #303030;
+    font-family: Merriweather;
+    padding-bottom-bottom: 24px;
+    letter-spacing: 2px
+
+}
+
+a.testHover:hover {
+
+    color: #999999;
 
 
 }
-.square {
+
+
+a.hoverLink {
+
+    color: #ffffff;
+    font-family: Merriweather;
+    text-decoration: none;
+
+}
+
+
+a.hoverLink:hover {
+
+
+    color: #bbbbbb;
+
+}
+
+#facebook {
+    margin-right: 8px; margin-top: 4px; margin-bottom: 4px;
+}
+
+#linkedin {
+    margin-left: 8px; margin-top: 4px; margin-bottom: 4px;
+}
+
+.fa {
+    padding: 10px;
+    font-size: 12px;
+    width: 40px;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    text-decoration: none;
 }
 
-.head img {
-    margin-left: auto;
-    margin-right: auto;
+/* Add a hover effect if you want */
+.fa:hover {
+    opacity: 0.7;
 }
 
-.name{
-    line-height:0;
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+    background: #3B5998;
+    color: white;
 }
 
-.position{
-    line-height:0;
+/* Twitter */
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+div.social {
+    position: fixed;
+    background-color: #292b2c;
+    width: 150px;
+    top: 120px;
+    height: 45px;
+}
+
+#contactInfo {
+    margin-left: 25%; width: 25%; float:left; text-align: center;
+}
+
+#contactInfo2 {
+    width: 25%; float:left; text-align: center
+}
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+
 }
 
 
-.bio {
-    /*font-size:0.6em;*/
-    margin-left: auto;
-    margin-right: auto;
-    background-image: linear-gradient(to bottom, white,transparent);
+.stay-in-place {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+.move-in-to-place {
+    position: absolute;
+    bottom: -100%;
+    height : 100%;
+    width : 100%;
+    opacity:0;
+}
+.box {
+    position: relative;
+    width:25%;
+    height:200px;
+    overflow:hidden;
+}
+.box:hover {
+    cursor: pointer;
+
+}
+
+.box:hover .move-in-to-place {
+
+    bottom: 0;
+    -webkit-transition: all 1s, -webkit-transform 1s;
+    transition: all 1s, transform 1s;
+    width:100%;
+    height:100%;
+    opacity:1;
+}
+
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+#main {
+
+    visibility: hidden;
+    height: 0px;
+    width: 0px;
+}
+
+#main {
+    transition: margin-left .5s;
+    padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+
+@media only screen and (max-width: 912px) {
+
+
+
+
+
+    #main {
+
+        visibility: visible;
+
+    }
+
+    #banner-image2 {
+
+
+        width: 90vw;
+        margin-top: 3vw;
+
+    }
+
+
+
+    div.banner {
+        position: fixed;
+        width: 100vw;
+        margin-top: -15px;
+
+
+        text-align: center;
+        align-content: center;
+        height: 15vw;
+        background-color: #e6e6e6;
+    }
+
+
+
+    #facebook {
+
+        position: fixed;
+        bottom: 125px;
+        left: 5px;
+        margin-left: 0px;
+        margin-right: -20px;
+        margin-top: 10px;
+        margin-bottom: 16px;
+        padding-bottom: 10px;
+
+    }
+
+
+    #linkedin {
+
+        position: fixed;
+        bottom: 75px;
+        left: 5px;
+        margin-left: 0px;
+        margin-right: -20px;
+        margin-top: 10px;
+        margin-bottom: 16px;
+        padding-bottom: 10px;
+
+    }
+
+
+
+
+    div.social {
+
+
+
+        background-color: #292b2c;
+        width: 50px;
+        top: auto;
+        bottom: 25px;
+        height: 165px;
+
+
+
+    }
+
+    #contactInfo {
+
+        margin-left: 0%;
+
+        visibility: hidden;
+
+        width: 100%;  text-align: center;
+
+    }
+
+
+    #contactInfo2 {
+
+
+        width: 100%; text-align: center;
+
+
+        visibility: hidden;
+
+    }
+
+
+    a.testHover {
+
+        text-decoration: none;
+
+        line-height: 16px;
+        color: #303030;
+        font-family: Merriweather;
+        padding-bottom-bottom: 24px;
+        letter-spacing: 2px
+
+    }
+
+
+    [class*="col-a-"] {
+        width: 100%;
+    }
+
+    .col-a-6 {
+
+        width: 50%;
+    }
+
+
+
+
+    #bottom-bar {
+
+        padding: 0px;
+    }
+
+
+    #titleBanner1 {
+
+        font-size: 18px;
+    }
+
+}
+
+
+
+
+/* ==========================================================================
+   Helper classes
+   ========================================================================== */
+
+/*
+ * Hide visually and from screen readers
+ */
+
+.hidden {
+    display: none !important;
+}
+
+/*
+ * Hide only visually, but have it available for screen readers:
+ * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+ */
+
+.visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+
+/*
+ * Extends the .visuallyhidden class to allow the element
+ * to be focusable when navigated to via the keyboard:
+ * https://www.drupal.org/node/897638
+ */
+
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    width: auto;
+}
+
+/*
+ * Hide visually and from screen readers, but maintain layout
+ */
+
+.invisible {
+    visibility: hidden;
+}
+
+/*
+ * Clearfix: contain floats
+ *
+ * For modern browsers
+ * 1. The space content is one way to avoid an Opera bug when the
+ *    `contenteditable` attribute is included anywhere else in the document.
+ *    Otherwise it causes space to appear at the top and bottom of elements
+ *    that receive the `clearfix` class.
+ * 2. The use of `table` rather than `block` is only necessary if using
+ *    `:before` to contain the top-margins of child elements.
+ */
+
+.clearfix:before,
+.clearfix:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+/* ==========================================================================
+   EXAMPLE Media Queries for Responsive Design.
+   These examples override the primary ('mobile first') styles.
+   Modify as content requires.
+   ========================================================================== */
+
+@media only screen and (min-width: 35em) {
+    /* Style adjustments for viewports that meet the condition */
+}
+
+@media print,
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
+    /* Style adjustments for high resolution devices */
+}
+
+/* ==========================================================================
+   Print styles.
+   Inlined to avoid the additional HTTP request:
+   http://www.phpied.com/delay-loading-your-print-css/
+   ========================================================================== */
+
+@media print {
+    *,
+    *:before,
+    *:after,
+    *:first-letter,
+    *:first-line {
+        background: transparent !important;
+        color: #000 !important; /* Black prints faster:
+                                   http://www.sanbeiji.com/archives/953 */
+        box-shadow: none !important;
+        text-shadow: none !important;
+    }
+
+    a,
+    a:visited {
+        text-decoration: underline;
+    }
+
+    a[href]:after {
+        content: " (" attr(href) ")";
+    }
+
+    abbr[title]:after {
+        content: " (" attr(title) ")";
+    }
+
+    /*
+     * Don't show links that are fragment identifiers,
+     * or use the `javascript:` pseudo protocol
+     */
+
+    a[href^="#"]:after,
+    a[href^="javascript:"]:after {
+        content: "";
+    }
+
+    pre,
+    blockquote {
+        border: 1px solid #999;
+        page-break-inside: avoid;
+    }
+
+    /*
+     * Printing Tables:
+     * http://css-discuss.incutio.com/wiki/Printing_Tables
+     */
+
+    thead {
+        display: table-header-group;
+    }
+
+    tr,
+    img {
+        page-break-inside: avoid;
+    }
+
+    img {
+        max-width: 100% !important;
+    }
+
+    p,
+    h2,
+    h3 {
+        orphans: 3;
+        widows: 3;
+    }
+
+    h2,
+    h3 {
+        page-break-after: avoid;
+    }
+}
+
+
+a[href^=tel] {
+    text-decoration:inherit;
+    color: inherit;
 }
