--- a/css/mw.css
+++ b/css/mw.css
@@ -462,11 +462,12 @@ a.testHover:hover {
 }
 .box {
     position: relative;
-    width: 25%;
+    width: 27%;
     overflow:hidden;
     height: 28vw;
-    margin-left: 12.5%;
+    margin-left: 9.5%;
     box-shadow: 2.5px 2.5px 5px #666666;
+    margin-top: 5vw;
 }
 .box:hover {
     cursor: pointer;
@@ -530,7 +531,43 @@ a.testHover:hover {
     width: 80%; margin-left: 10%; padding-top:50px
 }
 
+#mainBody2 {
+
+    width: 80%; margin-left: 10%; padding-top:50px; margin-top: 164px;
+}
+#articleBox {
+
+    width: 65%;
+
+}
+
+#newsBanner {
+
+    width: 30%;
+    margin-left: 5%;
+
+}
+
+
 @media only screen and (max-width: 912px) {
+
+    .ArticleInfo {
+
+        font-size: 12px;
+    }
+
+    #articleBox {
+
+        width: 100%;
+
+    }
+
+    #newsBanner {
+
+        width: 100%;
+        margin-left: 0%;
+
+    }
 
     .bioBox {
 
@@ -545,6 +582,12 @@ a.testHover:hover {
     #mainBody {
         width: 100%;
         margin: 0px;
+    }
+
+    #mainBody2 {
+        width: 100%;
+        margin: 0px;
+        margin-top: 15vw;
     }
 
 
