--- a/css/mw.css
+++ b/css/mw.css
@@ -549,7 +549,18 @@ a.testHover:hover {
 }
 
 
+#postBody {
+    padding-left: 5vw; padding-right: 5vw;
+}
+
+
 @media only screen and (max-width: 912px) {
+
+
+
+    #postBody {
+        padding-left: 1vw; padding-right: 1vw;
+    }
 
     .ArticleInfo {
 
